6:45 testimonials not working push

--- a/index.html
+++ b/index.html
@@ -196,29 +196,59 @@
                         <h3>What we love about you</h3>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                     </div>
-                    <div class="col-sm-4">
-                        <div class="service">
-                            <img src="assets/img/front-end.svg" alt="Front End Developer">
-                            <h4>Front-end</h4>
-                            <p>As a javascript developer, I have experience in HTML5 and CSS3 techniques working with jQuery or more advanced javascript MVC frameworks such as angular</p>
-                        </div><!-- /.service -->
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="service">
-                            <img src="assets/img/back-end.svg" alt="Back End Developer">
-                            <h4>Back-end</h4>
-                            <p>Utilising php frameworks such as Zend or creating bespoke code, I've written services supporting thousands of users, including REST APIs, e-learning applications and more.</p>
-                        </div><!-- /.service -->
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="service">
-                            <img src="assets/img/consultancy.svg" alt="Coding">
-                            <h4>Consultancy</h4>
-                            <p>As well as providing development services, I can also help you decide strategic roadmaps via consultancy services.</p>
-                        </div><!-- /.service -->
-                    </div>
+<!-- From https://codyhouse.co/ -->
+
+<div class="cd-testimonials-wrapper cd-container">
+  <ul class="cd-testimonials">
+    <li>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <div class="cd-author">
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/85807/usual_suspects_1.png" alt="Author image">
+        <ul class="cd-author-info">
+          <li>Todd Hockney</li>
+          <li>CFO</li>
+        </ul>
+      </div>
+    </li>
+    <li>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <div class="cd-author">
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/85807/usual_suspects_2.png" alt="Author image">
+        <ul class="cd-author-info">
+          <li>Michael McManus</li>
+          <li>CEO</li>
+        </ul>
+      </div>
+    </li>
+  </ul>
+</div>
+
+<div class="cd-testimonials-wrapper cd-container cd-light">
+  <ul class="cd-testimonials">
+    <li>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <div class="cd-author">
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/85807/usual_suspects_1.png" alt="Author image">
+        <ul class="cd-author-info">
+          <li>Todd Hockney</li>
+          <li>CFO</li>
+        </ul>
+      </div>
+    </li>
+    <li>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <div class="cd-author">
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/85807/usual_suspects_2.png" alt="Author image">
+        <ul class="cd-author-info">
+          <li>Michael McManus</li>
+          <li>CEO</li>
+        </ul>
+      </div>
+    </li>
+  </ul>
+</div>
+</div>
                 </div>
-            </div>
         </section><!-- /.secton-services -->
 
         <section id="portfolio" class="site-section section-portfolio">
@@ -290,27 +320,7 @@
                     </div>
                 </div>
             </div>
-        </section><!-- /.secton-portfolio -->
-
-        <section class="site-section section-counters text-center">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="10" data-speed="2000">0</p>
-                        <h4>Years Experience</h4>
-                    </div>
-                    <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="120" data-speed="2000">0</p>       
-                        <h4>Projects Delivered</h4>      
-                    </div>
-                    <div class="col-sm-4 col-xs-12">
-                        <p id="infinity" class="counter" data-from="0" data-to="1" data-speed="1000">0</p>
-                        <h4>Seconds on this site!<br>What are you waiting for?</h4>
-                    </div>
-                </div>
-            </div>
-        </section><!-- /.section-counters -->
-
+        </section>
         <section id="contact" class="site-section section-form text-center">
             <div class="container container1">
                 <div class="container container1">
@@ -378,16 +388,16 @@
                         </div>
 
                       </div>
-                        <div data-question="4" class="quiz__step--4 quiz__step">
+                        <div data-question="5" class="quiz__step--5 quiz__step">
                         <div class="question__emoji">🌈</div>
                         <h1 class="quiz__question">What is her favorite colour?</h1>
                         <div class="answer">
-                          <input class="answer__input" type="radio" id="aliens2_yes" name="aliens2" value="Yes">
-                          <label class="answer__label" for="aliens2_yes">Black</label>
+                          <input class="answer__input" type="radio" id="aliens3_yes" name="aliens3" value="Yes">
+                          <label class="answer__label" for="aliens3_yes">Black</label>
                         </div>
                         <div class="answer">
-                          <input class="answer__input" type="radio" id="aliens2_no" name="aliens2" value="No">
-                          <label class="answer__label" for="aliens2_no">Pink<div class="answer__tick">
+                          <input class="answer__input" type="radio" id="aliens3_no" name="aliens3" value="No">
+                          <label class="answer__label" for="aliens3_no">Pink<div class="answer__tick">
                               <svg width="14" height="14" viewBox="0 0 24 24">
                                 <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"></path>
                               </svg>
@@ -395,16 +405,16 @@
                         </div>
 
                       </div>
-                    <div data-question="4" class="quiz__step--4 quiz__step">
+                    <div data-question="6" class="quiz__step--6 quiz__step">
                         <div class="question__emoji">🏊‍♀️</div>
                         <h1 class="quiz__question">Would she rather 🏊‍♀️ or 🚴‍♀️</h1>
                         <div class="answer">
-                          <input class="answer__input" type="radio" id="aliens2_yes" name="aliens2" value="Yes">
-                          <label class="answer__label" for="aliens2_yes">Swim</label>
+                          <input class="answer__input" type="radio" id="aliens4_yes" name="aliens4" value="Yes">
+                          <label class="answer__label" for="aliens4_yes">Swim</label>
                         </div>
                         <div class="answer">
-                          <input class="answer__input" type="radio" id="aliens2_no" name="aliens2" value="No">
-                          <label class="answer__label" for="aliens2_no">Cycle<div class="answer__tick">
+                          <input class="answer__input" type="radio" id="aliens4_no" name="aliens4" value="No">
+                          <label class="answer__label" for="aliens4_no">Cycle<div class="answer__tick">
                               <svg width="14" height="14" viewBox="0 0 24 24">
                                 <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"></path>
                               </svg>
@@ -412,7 +422,7 @@
                         </div>
 
                       </div>
-                      <div data-question="5" class="quiz__step--5 quiz__step quiz__summary">
+                      <div data-question="7" class="quiz__step--7 quiz__step quiz__summary">
 
                         <h1 class="quiz__question">Summary</h1>
                         <div id="summary"></div>
@@ -457,22 +467,7 @@
     </main><!-- /#main -->
 
     <footer id="colophon" class="site-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4 col-xs-12">
-                    <a class="icon facebook-bg" href="#"><i class="icon-facebook"></i></a>
-                    <a class="icon twitter-bg" href="#"><i class="icon-twitter"></i></a>
-                    <a class="icon gplus-bg" href="#"><i class="icon-linkedin"></i></a>
-                    <a class="icon linkedin-bg" href="#"><i class="icon-gplus"></i></a>
-                </div>
-                <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3"><p class="copyright">2017. All Rights Reserved</p></div>
-                <div class="col-sm-4 col-xs-3">
-                    <div class="text-right page-scroll">
-                        <a class="icon icon-up-bg" href="#hero"><i class="icon-up"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
     </footer><!-- /#footer -->
 
     <!-- Modals -->
