--- a/index.html
+++ b/index.html
@@ -196,56 +196,52 @@
                         <h3>What we love about you</h3>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                     </div>
-<!-- From https://codyhouse.co/ -->
 
-<div class="cd-testimonials-wrapper cd-container">
-  <ul class="cd-testimonials">
-    <li>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <div class="cd-author">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/85807/usual_suspects_1.png" alt="Author image">
-        <ul class="cd-author-info">
-          <li>Todd Hockney</li>
-          <li>CFO</li>
-        </ul>
-      </div>
-    </li>
-    <li>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <div class="cd-author">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/85807/usual_suspects_2.png" alt="Author image">
-        <ul class="cd-author-info">
-          <li>Michael McManus</li>
-          <li>CEO</li>
-        </ul>
-      </div>
-    </li>
-  </ul>
+<div class="slideshow-container">
+<div class="mySlides">
+  <q style="font-size: 20px">The sweetest, yet a bit sour. The kindest, yet a lil bitchy. The cutest, yet not naive. The wittiest, yet a lil muddle headed. A ray of fucking sunshine, a happy go lucky piece of shit. 
+</q>
+    <br><br>
+  <p class="author">- Nikku</p>
+</div>
+<div class="mySlides">
+  <q style="font-size: 20px">Hey Anavi!!
+Known you since almost 6 years now(2015), I have seen you grow, change and evolve. I have seen and been through all the things and yet see are here strong for eachother. I love you for who you are and will always do so whatsoever, you dont have to have a doubt on it. I'll be there by your side. Lots of Love.</q>
+    <br><br>
+  <p class="author">- Mahi</p>
 </div>
 
-<div class="cd-testimonials-wrapper cd-container cd-light">
-  <ul class="cd-testimonials">
-    <li>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <div class="cd-author">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/85807/usual_suspects_1.png" alt="Author image">
-        <ul class="cd-author-info">
-          <li>Todd Hockney</li>
-          <li>CFO</li>
-        </ul>
-      </div>
-    </li>
-    <li>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <div class="cd-author">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/85807/usual_suspects_2.png" alt="Author image">
-        <ul class="cd-author-info">
-          <li>Michael McManus</li>
-          <li>CEO</li>
-        </ul>
-      </div>
-    </li>
-  </ul>
+<div class="mySlides">
+  <q style="font-size: 20px">Happy birthday Anavi ! I hope you have a great year ahead with all the exciting things coming your way and with your MBA. Just know you are loved. I will always cherish my childhood memories with you 💛. Always be the hyperactive and happy thing you are ! Stay safe, keep smiling and take it easy✌🏻
+Lots of love</q>
+    <br><br>
+  <p class="author">- Samrudh</p>
+</div>
+    <div class="mySlides">
+  <q style="font-size: 20px">Hey Anavi! 😘Many more happy returns of the day! I have known you since a year now(2019) and it’s been good so far with all your drama 🤣classes would be boring without you and all the gossips. Sorry not so sorry for always teasing you 😂 come back here soon. Miss you! Love you! Take care ❤️
+</q>
+    <br><br>
+  <p class="author">- Basa</p>
+</div>
+
+<div class="mySlides">
+  <q style="font-size: 20px">Live everyday like there is no tomorrow. Its one life and let no-one be more important than you. 
+May your life be as glowing as your eyes. bless you with all the happiness and a cupboard full of hair products.Lots of love.</q>
+    <br><br>
+  <p class="author">- GG</p>
+</div>
+
+
+
+<a class="prev" onclick="plusSlides(-1)">❮</a>
+<a class="next" onclick="plusSlides(1)">❯</a>
+
+</div>
+
+<div class="dot-container">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
 </div>
 </div>
                 </div>
@@ -328,7 +324,7 @@
                     <div class="quiz__inner">
                       <div data-question="1" class="quiz__step--1 quiz__step--current quiz__step">
                         <div class="question__emoji">🚬 </div>
-                        <h1 class="quiz__question">Does you smoke cigarettes?</h1>
+                        <h1 class="quiz__question">Does she smoke cigarettes?</h1>
                         <div class="answer">
                           <input data-char="65" class="answer__input" type="radio" id="smoke_yes" name="smoke" value="Yes">
                           <label class="answer__label" for="smoke_yes">Yes</label>
