The qui has been made functional

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ May your life be as glowing as your eyes. bless you with all the happiness and a
                 <div class="row">
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-1.jpg" class="img-res" alt="">
+                            <img src="assets/img/portfolio-1.jpg" class="img-res" alt="1">
                             <div class="portfolio-item-info">
                                 <h4>Project Title</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -266,7 +266,7 @@ May your life be as glowing as your eyes. bless you with all the happiness and a
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-2.jpg" class="img-res" alt="">
+                            <img src="assets/img/portfolio-2.jpg" class="img-res" alt="2">
                             <div class="portfolio-item-info">
                                 <h4>Project Title</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -276,7 +276,7 @@ May your life be as glowing as your eyes. bless you with all the happiness and a
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-3.jpg" class="img-res" alt="">
+                            <img src="assets/img/portfolio-3.jpg" class="img-res" alt="3">
                             <div class="portfolio-item-info">
                                 <h4>Project Title</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -286,7 +286,7 @@ May your life be as glowing as your eyes. bless you with all the happiness and a
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-4.jpg" class="img-res" alt="">
+                            <img src="assets/img/portfolio-4.jpg" class="img-res" alt="4">
                             <div class="portfolio-item-info">
                                 <h4>Project Title</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -296,7 +296,7 @@ May your life be as glowing as your eyes. bless you with all the happiness and a
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-5.jpg" class="img-res" alt="">
+                            <img src="assets/img/portfolio-5.jpg" class="img-res" alt="5">
                             <div class="portfolio-item-info">
                                 <h4>Project Title</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -306,7 +306,7 @@ May your life be as glowing as your eyes. bless you with all the happiness and a
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-6.jpg" class="img-res" alt="">
+                            <img src="assets/img/portfolio-6.jpg" class="img-res" alt="6">
                             <div class="portfolio-item-info">
                                 <h4>Project Title</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -371,12 +371,12 @@ May your life be as glowing as your eyes. bless you with all the happiness and a
                         <div class="question__emoji">🥞</div>
                         <h1 class="quiz__question">Does she prefer pancakes or dosas?</h1>
                         <div class="answer">
-                          <input class="answer__input" type="radio" id="aliens2_yes" name="aliens2" value="Yes">
-                          <label class="answer__label" for="aliens2_yes">Yes</label>
+                          <input class="answer__input" type="radio" id="pancakes_yes" name="pancakes" value="Yes">
+                          <label class="answer__label" for="pancakes_yes">Yes</label>
                         </div>
                         <div class="answer">
-                          <input class="answer__input" type="radio" id="aliens2_no" name="aliens2" value="No">
-                          <label class="answer__label" for="aliens2_no">No<div class="answer__tick">
+                          <input class="answer__input" type="radio" id="pancakes_no" name="pancakes" value="No">
+                          <label class="answer__label" for="pancakes_no">No<div class="answer__tick">
                               <svg width="14" height="14" viewBox="0 0 24 24">
                                 <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"></path>
                               </svg>
@@ -388,12 +388,12 @@ May your life be as glowing as your eyes. bless you with all the happiness and a
                         <div class="question__emoji">🌈</div>
                         <h1 class="quiz__question">What is her favorite colour?</h1>
                         <div class="answer">
-                          <input class="answer__input" type="radio" id="aliens3_yes" name="aliens3" value="Yes">
-                          <label class="answer__label" for="aliens3_yes">Black</label>
+                          <input class="answer__input" type="radio" id="colour_yes" name="colour" value="Black">
+                          <label class="answer__label" for="colour_yes">Black</label>
                         </div>
                         <div class="answer">
-                          <input class="answer__input" type="radio" id="aliens3_no" name="aliens3" value="No">
-                          <label class="answer__label" for="aliens3_no">Pink<div class="answer__tick">
+                          <input class="answer__input" type="radio" id="colour_no" name="colour" value="Pink">
+                          <label class="answer__label" for="colour_no">Pink<div class="answer__tick">
                               <svg width="14" height="14" viewBox="0 0 24 24">
                                 <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"></path>
                               </svg>
@@ -405,22 +405,53 @@ May your life be as glowing as your eyes. bless you with all the happiness and a
                         <div class="question__emoji">🏊‍♀️</div>
                         <h1 class="quiz__question">Would she rather 🏊‍♀️ or 🚴‍♀️</h1>
                         <div class="answer">
-                          <input class="answer__input" type="radio" id="aliens4_yes" name="aliens4" value="Yes">
-                          <label class="answer__label" for="aliens4_yes">Swim</label>
+                          <input class="answer__input" type="radio" id="swim_yes" name="swim" value="Swim">
+                          <label class="answer__label" for="swim_yes">Swim</label>
                         </div>
                         <div class="answer">
-                          <input class="answer__input" type="radio" id="aliens4_no" name="aliens4" value="No">
-                          <label class="answer__label" for="aliens4_no">Cycle<div class="answer__tick">
+                          <input class="answer__input" type="radio" id="swim_no" name="swim" value="Cycle">
+                          <label class="answer__label" for="swim_no">Cycle<div class="answer__tick">
                               <svg width="14" height="14" viewBox="0 0 24 24">
                                 <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"></path>
                               </svg>
                             </div></label>
                         </div>
-
+                    </div>
+                    <div data-question="7" class="quiz__step--7 quiz__step">
+                      <div class="question__emoji">💏</div>
+                      <h1 class="quiz__question">Has she kissed a girl?</h1>
+                      <div class="answer">
+                        <input class="answer__input" type="radio" id="kiss_yes" name="kiss" value="Yes">
+                        <label class="answer__label" for="kiss_yes">Yes</label>
                       </div>
-                      <div data-question="7" class="quiz__step--7 quiz__step quiz__summary">
+                      <div class="answer">
+                        <input class="answer__input" type="radio" id="kiss_no" name="kiss" value="No">
+                        <label class="answer__label" for="kiss_no">No<div class="answer__tick">
+                            <svg width="14" height="14" viewBox="0 0 24 24">
+                              <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"></path>
+                            </svg>
+                          </div></label>
+                      </div>
+                  </div>
+                  <div data-question="8" class="quiz__step--8 quiz__step">
+                    <div class="question__emoji">🧑🏿</div>
+                    <h1 class="quiz__question">Was Puneet Rajkumar her childhood crush?</h1>
+                    <div class="answer">
+                      <input class="answer__input" type="radio" id="crush_yes" name="crush" value="Yes">
+                      <label class="answer__label" for="crush_yes">Yes</label>
+                    </div>
+                    <div class="answer">
+                      <input class="answer__input" type="radio" id="crush_no" name="crush" value="No">
+                      <label class="answer__label" for="crush_no">No<div class="answer__tick">
+                          <svg width="14" height="14" viewBox="0 0 24 24">
+                            <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"></path>
+                          </svg>
+                        </div></label>
+                    </div>
+                </div>
+                     <div data-question="9" class="quiz__step--9 quiz__step quiz__summary">
 
-                        <h1 class="quiz__question">Summary</h1>
+                        <h1 class="quiz__question">Summary -> Answer</h1>
                         <div id="summary"></div>
                       </div>
                     </div>
