--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <li class="page-scroll"><a href="#about">About</a></li>
                         <li class="page-scroll"><a href="#service">Love</a></li>
                         <li class="page-scroll"><a href="#portfolio">Gallery</a></li>
-                        <li class="page-scroll"><a href="#contact">Know me?</a></li>
+                        <li class="page-scroll"><a href="#contact">Know her?</a></li>
                         
                     </ul><!-- /.navbar-nav -->
 
