--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ May your life be as glowing as your eyes. bless you with all the happiness and a
                 <a href="#x" class="thumbnail"><img src="assets/img/90.jpg" alt="Image" class="img-responsive"></a>
               </div>
               <div class="col-sm-3 col-xs-6">
-                <a href="#x" class="thumbnail"><img src="assets/img/7%20(2).JPG" alt="Image" class="img-responsive"></a>
+                <a href="#x" class="thumbnail"><img src="assets/img/ja.jpg" alt="Image" class="img-responsive"></a>
               </div>
             </div>
             <!--/row-->
@@ -317,13 +317,13 @@ May your life be as glowing as your eyes. bless you with all the happiness and a
                 <a href="#x" class="thumbnail"><img src="assets/img/f1.jpg" alt="Image" class="img-responsive"></a>
               </div>
               <div class="col-sm-3 col-xs-6">
-                <a href="#x" class="thumbnail"><img src="assets/img/f2.jpg" alt="Image" class="img-responsive"></a>
+                <a href="#x" class="thumbnail"><img src="assets/img/f2.JPG" alt="Image" class="img-responsive"></a>
               </div>
               <div class="col-sm-3 col-xs-6">
-                <a href="#x" class="thumbnail" style="margin-top: 60px"><img src="assets/img/f3.jpg" alt="Image" class="img-responsive"></a>
+                <a href="#x" class="thumbnail" style="margin-top: 60px"><img src="assets/img/f3.JPG" alt="Image" class="img-responsive"></a>
               </div>
               <div class="col-sm-3 col-xs-6">
-                <a href="#x" class="thumbnail"><img src="assets/img/f4.jpg" alt="Image" class="img-responsive"></a>
+                <a href="#x" class="thumbnail"><img src="assets/img/f4.JPG" alt="Image" class="img-responsive"></a>
               </div>
             </div>
             
@@ -336,10 +336,10 @@ May your life be as glowing as your eyes. bless you with all the happiness and a
                 <a href="#x" class="thumbnail"><img src="assets/img/l1.jpg" alt="Image" class="img-responsive"></a>
               </div>
               <div class="col-sm-3 col-xs-6">
-                <a href="#x" class="thumbnail"><img src="assets/img/l2.jpg" alt="Image" class="img-responsive"></a>
+                <a href="#x" class="thumbnail"><img src="assets/img/l2.JPG" alt="Image" class="img-responsive"></a>
               </div>
               <div class="col-sm-3 col-xs-6">
-                <a href="#x" class="thumbnail"><img src="assets/img/l3.jpg" alt="Image" class="img-responsive"></a>
+                <a href="#x" class="thumbnail"><img src="assets/img/l3.JPG" alt="Image" class="img-responsive"></a>
               </div>
               <div class="col-sm-3 col-xs-6">
                 <a href="#x" class="thumbnail"><img src="assets/img/l4.jpeg" alt="Image" class="img-responsive"></a>
