--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ May your life be as glowing as your eyes. bless you with all the happiness and a
                 <a href="#x" class="thumbnail"><img src="assets/img/90.jpg" alt="Image" class="img-responsive"></a>
               </div>
               <div class="col-sm-3 col-xs-6">
-                <a href="#x" class="thumbnail"><img src="assets/img/ja.jpg" alt="Image" class="img-responsive"></a>
+                <a href="#x" class="thumbnail"><img src="assets/img/coorg.jpg" alt="Image" class="img-responsive"></a>
               </div>
             </div>
             <!--/row-->
