changes after indianmoney

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                         <p>She knows how to make the world envious of her with her attractive aura, eye soothing beauty, street smart skills, charming social skills and genuine love for everyone. </p>
                         <p>Always curious, extremely calculative, fun loving, friend's favourite, family's favourite, multi talented, ever jumpy, she surely knows how to live a life</p>
+                        <p>She bagged the best sportsperson award in her school, she is a scholarship holder and the college topper, an admired blogger, an ecstatic model, a nature loving NGO collaborator, a mesmerising speed painting artist, who also flaunts her talent of curly hair care counselling. She now proudly hosts a finance based company's youtube channel in the most graceful manner possible.  </p>                        
                     </div>
                 </div>
             </div>
@@ -416,7 +417,7 @@ May your life be as glowing as your eyes. bless you with all the happiness and a
                       </div>
                         <div data-question="4" class="quiz__step--4 quiz__step">
                         <div class="question__emoji">🥞</div>
-                        <h1 class="quiz__question">Does she prefer pancakes over dosas?</h1>
+                        <h1 class="quiz__question">Does she prefer dosas over pancakes?</h1>
                         <div class="answer">
                           <input class="answer__input" type="radio" id="pancakes_yes" name="pancakes" value="Yes">
                           <label class="answer__label" for="pancakes_yes">Yes</label>
@@ -453,11 +454,11 @@ May your life be as glowing as your eyes. bless you with all the happiness and a
                         <h1 class="quiz__question">Would she prefer cycling over swimming</h1>
                         <div class="answer">
                           <input class="answer__input" type="radio" id="swim_yes" name="swim" value="Swim">
-                          <label class="answer__label" for="swim_yes">Swim</label>
+                          <label class="answer__label" for="swim_yes">Yes</label>
                         </div>
                         <div class="answer">
                           <input class="answer__input" type="radio" id="swim_no" name="swim" value="Cycle">
-                          <label class="answer__label" for="swim_no">Cycle<div class="answer__tick">
+                          <label class="answer__label" for="swim_no">No<div class="answer__tick">
                               <svg width="14" height="14" viewBox="0 0 24 24">
                                 <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"></path>
                               </svg>
