Update after appreciation in LSEG

--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                         <p>She knows how to make the world envious of her with her attractive aura, eye soothing beauty, street smart skills, charming social skills and genuine love for everyone. </p>
-                        <p>Always curious, extremely calculative, fun loving, friend's favourite, family's favourite, multi talented, ever jumpy, she surely knows how to live a life</p>
-                        <p>She bagged the best sportsperson award in her school, she is a scholarship holder and the college topper, an admired blogger, an ecstatic model, a nature loving NGO collaborator, a mesmerising speed painting artist, who also flaunts her talent of curly hair care counselling. She now proudly hosts a finance based company's youtube channel in the most graceful manner possible.  </p>                        
+                        <p>Always curious, extremely calculative, fun loving, friend's favourite, family's favourite, multi talented, ever jumpy, she surely knows how to live a life.</p>
+                        <p>She bagged the best sportsperson award in her school, she is a scholarship holder and the college topper, an admired blogger, an ecstatic model, a nature loving NGO collaborator, a mesmerising speed painting artist, who also flaunts her talent of curly hair care counselling. </p>
+                        <p>She proudly hosted a finance based company's youtube channel in the most graceful manner possible. She joined a financial firm and was claimed an important asset for the company within months of joining, owing to her unmatchable contribution. </p>                        
                     </div>
                 </div>
             </div>
